[fix] spinner fullscreen overflow.

--- a/client/src/assets/styles/base/reset.scss
+++ b/client/src/assets/styles/base/reset.scss
@@ -6,7 +6,6 @@
 }
 
 body {
-  position: relative;
   color: #050505;
 }
 
